<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trakr</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="action_select_target">Select target</string>
    <string name="action_select_date">Select date</string>
    <string name="action_create">Create</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_finish">Finish</string>
    <string name="title_task">Task</string>
    <string name="title_progress">Progress</string>
    <string name="title_my_tasks">My tasks</string>
    <string name="title_my_progress">My progress</string>
    <string name="title_progress_detail">Tasks</string>
    <string name="title_select_plan">Select plan</string>
    <string name="title_create_plan">Create plan</string>
    <string name="title_select_target">Select target</string>
    <string name="title_create_target">Create target</string>
    <string name="label_target">Target</string>
    <string name="label_total">Total</string>
    <string name="label_unit">Unit</string>
    <string name="label_start_date">Start date</string>
    <string name="label_num_tasks">Num of tasks</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="error_missing_target_name">Target name is required.</string>
    <string name="create_target_progress">Creating target&#8230;</string>
    <string name="create_plan_progress">Creating plan&#8230;</string>
    <string name="create_progress_progress">Creating progress&#8230;</string>
    <string name="complete_task_progress">Completing task&#8230;</string>
    <string name="unit_chapter">Chapter</string>
    <string name="unit_page">Page</string>
    <string name="repeat_day">Every day</string>
    <string name="repeat_week">Every week</string>
    <string name="repeat_month">Every month</string>
    <string name="error_missing_target">Target is required.</string>
    <string name="error_non_positive_total">Total must be positive.</string>
    <string name="error_invalid_unit">Invalid unit.</string>
    <string name="error_missing_start_date">Start date is required.</string>
    <string name="error_non_positive_num_tasks">Num of tasks must be positive.</string>
    <string name="error_invalid_repeat">Invalid repeat mode.</string>
    <string name="error_missing_plan">Plan is required.</string>
    <string name="error_negative_cost">Cost must be positive.</string>

</resources>