<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_target" />

        <Button
            android:id="@+id/action_select_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_select_target" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_total" />

        <EditText
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unit" />

        <Spinner
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/units_array" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_start_date" />

        <Button
            android:id="@+id/action_select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_select_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_num_tasks" />

        <EditText
            android:id="@+id/num_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_repeat" />

        <Spinner
            android:id="@+id/repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/repeats_array" />

        <Button
            android:id="@+id/action_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_create" />
    </LinearLayout>

</ScrollView>